manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: docs-uat-123
  name: pr-123-app
  namespace: docs-uat
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
    app.kubernetes.io/instance: docs-uat-123
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: docs-uat-123
  name: pr-123-elasticsearch
  namespace: docs-uat
spec:
  ports:
  - name: 9200-9200
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: elasticsearch
    app.kubernetes.io/instance: docs-uat-123
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
    app.kubernetes.io/instance: docs-uat-123
  name: pr-123-app
  namespace: docs-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      app.kubernetes.io/instance: docs-uat-123
  strategy: {}
  template:
    metadata:
      labels:
        app: app
        app.kubernetes.io/instance: docs-uat-123
    spec:
      containers:
      - image: ghcr.io/ukfast/docs-app:123
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
        name: app
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
    app.kubernetes.io/instance: docs-uat-123
  name: pr-123-elasticsearch
  namespace: docs-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      app.kubernetes.io/instance: docs-uat-123
  strategy: {}
  template:
    metadata:
      labels:
        app: elasticsearch
        app.kubernetes.io/instance: docs-uat-123
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Dlog4j2.formatMsgNoLookups=true -Xms1g -Xmx1g
        - name: discovery.type
          value: single-node
        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
        livenessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 10
          periodSeconds: 10
        name: elasticsearch
        readinessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: docs-uat-123
  name: pr-123-app-ingress
  namespace: docs-uat
spec:
  rules:
  - host: PLACEHOLDER
    http:
      paths:
      - backend:
          service:
            name: pr-123-app
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - PLACEHOLDER
    secretName: docsuat-devops-ans-uk-tls
